// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Image with caption renders with caption and overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin-bottom: 8px;
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

.emotion-5 {
  margin-bottom: 64px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 24px;
  line-height: 1.1666666666666667;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-6 svg {
  fill: #0a0a0a;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.1958333333333334em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2958333333333334em;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  text-transform: uppercase;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0.5px;
}

.emotion-7 svg {
  fill: #0a0a0a;
}

.emotion-7::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-7::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="http://webstyle.unicomm.fsu.edu/3.2/img/placeholders/ratio-pref-3-2.png"
      />
    </picture>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        <p
          class="emotion-6"
        >
          Caption component with both caption and credit text
        </p>
      </div>
      <p
        class="emotion-7"
      >
        Credit text
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Image Image with caption renders with caption component 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin-bottom: 8px;
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

.emotion-5 {
  margin-bottom: 16px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  border-radius: 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  text-transform: uppercase;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0.5px;
}

.emotion-7 svg {
  fill: #535353;
}

.emotion-7::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-7::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="http://webstyle.unicomm.fsu.edu/3.2/img/placeholders/ratio-pref-3-2.png"
      />
    </picture>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        <p
          class="emotion-6"
        >
          Caption component with both caption and credit text
        </p>
      </div>
      <p
        class="emotion-7"
      >
        Credit text
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Image Image with caption renders with caption inset 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    padding: 32px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    padding: 48px;
  }
}

.emotion-5 {
  margin-bottom: 16px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  border-radius: 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  text-transform: uppercase;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0.5px;
}

.emotion-7 svg {
  fill: #535353;
}

.emotion-7::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-7::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="http://webstyle.unicomm.fsu.edu/3.2/img/placeholders/ratio-pref-3-2.png"
      />
    </picture>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        <p
          class="emotion-6"
        >
          Caption component with both caption and credit text
        </p>
      </div>
      <p
        class="emotion-7"
      >
        Credit text
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Image Image with caption renders with caption inset and overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    padding: 32px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    padding: 48px;
  }
}

.emotion-5 {
  margin-bottom: 16px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #0a68c1;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-6 svg {
  fill: #0a68c1;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  color: #0a68c1;
  text-transform: uppercase;
}

.emotion-7 svg {
  fill: #0a68c1;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="http://webstyle.unicomm.fsu.edu/3.2/img/placeholders/ratio-pref-3-2.png"
      />
    </picture>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        <p
          class="emotion-6"
        >
          Caption component with both caption and credit text
        </p>
      </div>
      <p
        class="emotion-7"
      >
        Credit text
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with MQ aspect ratio 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    width: 100%;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    width: 100%;
  }
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  border-radius: 0;
  background-color: #fafafa;
}

@media screen and (max-width: 479px) {
  .emotion-1 {
    padding-top: 300%;
    height: 0;
  }
}

@media screen and (min-width: 480px) {
  .emotion-1 {
    padding-top: 100%;
    height: 0;
  }
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  top: 0;
  left: 0;
  position: absolute;
}

@media screen and (max-width: 479px) {
  .emotion-3 {
    height: auto;
    width: 100%;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    height: auto;
    width: 100%;
  }
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with MQ aspect ratio,  width and height 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    width: 100px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    width: 300px;
  }
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  border-radius: 0;
  background-color: #fafafa;
}

@media screen and (max-width: 479px) {
  .emotion-1 {
    padding-top: 60%;
    height: 0;
  }
}

@media screen and (min-width: 480px) {
  .emotion-1 {
    padding-top: 60%;
    height: 0;
  }
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  top: 0;
  left: 0;
  position: absolute;
}

@media screen and (max-width: 479px) {
  .emotion-3 {
    height: 60px;
    width: 100px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    height: 180px;
    width: 300px;
  }
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with MQ width and height 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    width: 100px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    width: 300px;
  }
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  border-radius: 0;
  background-color: #fafafa;
}

@media screen and (max-width: 479px) {
  .emotion-1 {
    padding-top: 100%;
    height: 0;
  }
}

@media screen and (min-width: 480px) {
  .emotion-1 {
    padding-top: 66%;
    height: 0;
  }
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  top: 0;
  left: 0;
  position: absolute;
}

@media screen and (max-width: 479px) {
  .emotion-3 {
    height: 100px;
    width: 100px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    height: 200px;
    width: 300px;
  }
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with height dimensions and 1:3 aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 300%;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 300px;
  width: 100px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with height dimensions in px and 1:3 aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 300%;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 300px;
  width: 100px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with no dimensions and 1:1 aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 100%;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with no dimensions and invalid aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with no dimensions or aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with number dimensions or aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 100%;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 100px;
  width: 100px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with string dimensions or aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: auto;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: auto;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with width dimensions and 1:3 aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 300%;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 300px;
  width: 100px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with width dimensions in px and 1:3 aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 300%;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 300px;
  width: 100px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image render with incorect path 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        class="emotion-3"
        src="incorrect-path"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image render with multiple sources 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <source
        media="screen and (min-width: 1024px)"
        srcset="image-lg.jpg"
      />
      <source
        media="screen and (min-width: 768px) and (max-width: 1023px)"
        srcset="image-md.jpg"
      />
      <source
        media="(min-width: 600px)"
        srcset="image-600.jpg"
      />
      <img
        class="emotion-3"
        src="image.jpg"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image renders with defaults 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 3px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 100%;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image renders with defaults after load 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 3px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  height: auto;
  padding-top: 0;
  border-radius: 0;
}

.emotion-2 {
  opacity: 1;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  -webkit-animation: fadeIn 300ms;
  animation: fadeIn 300ms;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <img
        alt="Example Image"
        class="emotion-2"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image renders with max height and width 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 3px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 100%;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  max-width: 500px;
  max-height: 500px;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image renders with object-fit and object-position 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 3px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 100%;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  object-fit: cover;
  object-position: 50% 50%;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image renders with placeholder icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 3px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 100%;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-4.emotion-4 {
  width: 48px;
  height: 48px;
}

.emotion-6 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
            />
          </svg>
        </div>
      </div>
      <img
        alt="Example Image"
        class="emotion-6"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image renders with placeholder icon override 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 3px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 100%;
  height: 0;
  border-radius: 0;
  background-color: #fafafa;
}

.emotion-1 svg {
  fill: #c0c0c0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-4.emotion-4 {
  width: 48px;
  height: 48px;
}

.emotion-6 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
            />
          </svg>
        </div>
      </div>
      <img
        alt="Example Image"
        class="emotion-6"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image stylePreset renders with invalidPreset 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 3px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 100%;
  height: 0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image stylePreset renders with maskRound 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 3px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 100%;
  height: 0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image stylePreset renders with maskSemiRounded 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 3px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 100%;
  height: 0;
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image stylePreset with loading=lazy 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 3px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  height: auto;
  padding-top: 0;
  border-radius: 0;
}

.emotion-2 {
  opacity: 1;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  -webkit-animation: fadeIn 300ms;
  animation: fadeIn 300ms;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <img
        alt="Example Image"
        class="emotion-2"
        loading="lazy"
        src=""
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image stylePreset with mq 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 3px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 100%;
  height: 0;
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    border-radius: 12px;
    background-color: #fafafa;
  }

  .emotion-1 svg {
    fill: #c0c0c0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    border-radius: 24px;
    background-color: #fafafa;
  }

  .emotion-1 svg {
    fill: #c0c0c0;
  }
}

.emotion-2 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-3 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <img
        alt="Example Image"
        class="emotion-3"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`Image stylePreset with renderOnServer & loading=lazy 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 3px;
}

.emotion-1 {
  position: relative;
  width: 100%;
  display: block;
  height: auto;
  padding-top: 0;
  border-radius: 0;
}

.emotion-2 {
  opacity: 1;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  -webkit-animation: fadeIn 300ms;
  animation: fadeIn 300ms;
}

<div
    class="emotion-0"
  >
    <picture
      class="emotion-1"
    >
      <img
        alt="Example Image"
        class="emotion-2"
        loading="lazy"
        src="/placeholder-3x2.png"
      />
    </picture>
  </div>
</DocumentFragment>
`;
